JOTM-28/12/2018-Verificar si hay corte
Verificar si existe algun corte actualmente

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -113,6 +113,7 @@
     <Compile Include="DTOs\Mobile\CategoriaDto.cs" />
     <Compile Include="DTOs\Mobile\CorteDto.cs" />
     <Compile Include="DTOs\Mobile\Cortes\DatosBusquedaCortesDTO.cs" />
+    <Compile Include="DTOs\Mobile\Cortes\DatosCortesAntesVentaDTO.cs" />
     <Compile Include="DTOs\Mobile\Cortes\UsuarioDTO.cs" />
     <Compile Include="DTOs\Mobile\Cortes\UsuariosCorteDTO.cs" />
     <Compile Include="DTOs\Mobile\Cortes\VentasCorteDTO.cs" />
