CJAL-Avance modulo Cobranza-28/12/2018

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -183,6 +183,11 @@
     <add key="GetCamionetas" value="api/pedidos/buscar/camionetas/" />
     <add key="GetPipas" value="api/pedidos/buscar/pipas/" />
     <!-- Pedidos -->
+    <!-- Pedidos -->
+    <add key="GetListaCargos" value="api/cobranza/buscar/listacargos/" />
+    <add key="GetCargoId" value="api/cobranza/buscar/cargos/" />
+    <add key="PostRegistrarAbono" value="api/cobranza/registrar/abono"/>    
+    <!-- Pedidos -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
