cjal-31/12/2018- avances pantallas cobranza

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11558,6 +11558,8 @@
     <Content Include="Views\Pedidos\AltaClienteDireccion.cshtml" />
     <Content Include="Views\Cobranza\Index.cshtml" />
     <Content Include="Views\Cobranza\_AbonosPartial.cshtml" />
+    <Content Include="Views\Cobranza\CreditoRecuperado.cshtml" />
+    <Content Include="Views\Cobranza\CarteraVencida.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
