CJAL-03/01/2018 - Cobranza--Se finaliza el modulo cartera vencida

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -183,11 +183,12 @@
     <add key="GetCamionetas" value="api/pedidos/buscar/camionetas/" />
     <add key="GetPipas" value="api/pedidos/buscar/pipas/" />
     <!-- Pedidos -->
-    <!-- Pedidos -->
+    <!-- Cobranza -->
     <add key="GetListaCargos" value="api/cobranza/buscar/listacargos/" />
     <add key="GetCargoId" value="api/cobranza/buscar/cargos/" />
-    <add key="PostRegistrarAbono" value="api/cobranza/registrar/abono"/>    
-    <!-- Pedidos -->
+    <add key="PostRegistrarAbono" value="api/cobranza/registrar/abono"/>
+    <add key="PostRegistrarAbonosLst" value="api/cobranza/registrar/abonos"/>    
+    <!-- Cobranza -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
