CJAL-04/01/2019-Se finaliza desarrollo funcionalidad vista cartera vencida

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -333,6 +333,8 @@
     <Compile Include="Models\Catalogos\UsuariosModel.cs" />
     <Compile Include="Models\Cobranza\AbonosModel.cs" />
     <Compile Include="Models\Cobranza\CargosModel.cs" />
+    <Compile Include="Models\Cobranza\CarteraVencidaModel.cs" />
+    <Compile Include="Models\Cobranza\ReporteModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ImagenDTO.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
