--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -187,7 +187,8 @@
     <add key="GetListaCargos" value="api/cobranza/buscar/listacargos/" />
     <add key="GetCargoId" value="api/cobranza/buscar/cargos/" />
     <add key="PostRegistrarAbono" value="api/cobranza/registrar/abono"/>
-    <add key="PostRegistrarAbonosLst" value="api/cobranza/registrar/abonos"/>    
+    <add key="PostRegistrarAbonosLst" value="api/cobranza/registrar/abonos"/>
+    <add key="PutListaCartera" value="api/cobranza/buscar/carteravencida"/>    
     <!-- Cobranza -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
