AMVR: Se genera apk
Se depura el código y se genera el APK.

--- a/1.Layers/1.1Presentation/1.1.2Mobile/local.properties
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Jan 15 13:24:08 CST 2019
-sdk.dir=/Users/neotecknewts/Library/Android/sdk
+sdk.dir=/Users/Shared/Library/Android/sdk/
+#sdk.dir=/Users/neotecknewts/Library/Android/sdk
