--- a/1.Layers/1.1Presentation/1.1.2Mobile/local.properties
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 15 13:24:08 CST 2019
+#Wed Jan 16 16:51:55 CST 2019
+ndk.dir=/Users/Shared/Library/Android/sdk/ndk-bundle
 sdk.dir=/Users/Shared/Library/Android/sdk/
-#sdk.dir=/Users/neotecknewts/Library/Android/sdk
