JSA- Avance ajustes rema

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11567,6 +11567,7 @@
     <Content Include="Views\Cobranza\CarteraVencida.cshtml" />
     <Content Include="Views\Empresas\_DatabaseComboBoxPartial.cshtml" />
     <Content Include="Views\Pedidos\_ComboBoxPartialPais.cshtml" />
+    <Content Include="Views\Remanente\_cbPuntosventaPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
