JSA -Ajustes Remanente

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -85,6 +85,7 @@
     <Compile Include="DTOs\Almacen\InventarioAnteriorDto.cs" />
     <Compile Include="DTOs\Almacen\RegistroDTO.cs" />
     <Compile Include="DTOs\Almacen\RemaDto.cs" />
+    <Compile Include="DTOs\Almacen\RemanenteDTO.cs" />
     <Compile Include="DTOs\Almacen\RemanenteGeneralDTO.cs" />
     <Compile Include="DTOs\Almacen\RemanentePuntoVentaDTO.cs" />
     <Compile Include="DTOs\Catalogo\CamionetaDTO.cs" />
