cjal-24/01/2019- versionar modulo equipo transporte

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -192,6 +192,13 @@
     <add key="PostRegistrarAbonosLst" value="api/cobranza/registrar/abonos" />
     <add key="PutListaCartera" value="api/cobranza/buscar/carteravencida" />
     <!-- Cobranza -->
+    <!-- EquipoTransporte -->
+    <add key="GetListaEquiposTransporte" value="api/equipotransporte/buscar/listavehiculos/" />
+    <add key="GetVehiculoId" value="api/equipotransporte/buscar/vehiculo/" />
+    <add key="PutModificarVehiculo" value="api/equipotransporte/modificar/vehiculo" />
+    <add key="PostRegistrarVehiculo" value="api/equipotransporte/registrar/vehiculo" />
+    <add key="PutEliminarVehiculo" value="api/equipotransporte/eliminar/vehiculo/" />   
+    <!-- EquipoTransporte -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
