--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -118,6 +118,12 @@
     <Compile Include="Entidades\CategoriaProducto.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\CCombustible.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\CDetalleEquipoTransporte.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\CentroCosto.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
@@ -127,6 +133,9 @@
     <Compile Include="Entidades\ClienteLocacion.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\CMantenimiento.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\CTipoEgreso.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
@@ -134,6 +143,15 @@
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
     <Compile Include="Entidades\CuentaContable.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\CUtilitario.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\DetalleMantenimiento.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\DetalleRecargaCombustible.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
     <Compile Include="Entidades\Egreso.cs">
