JSA - Avance estructura nuevos modulos
Modulos afectados: 
Mantenimiento
Recarga combustible

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -282,6 +282,7 @@
     <Compile Include="Servicios\Almacen\CalcularAlmacenServicio.cs" />
     <Compile Include="DTOs\Mobile\TipoPersonaDto.cs" />
     <Compile Include="DTOs\Mobile\TipoRegimenFiscalDto.cs" />
+    <Compile Include="Servicios\EquipoTransporte\MantenimientoDetalleSerivicio.cs" />
     <Compile Include="Servicios\EquipoTransporte\MantenimientoServicio.cs" />
     <Compile Include="Servicios\EquipoTransporte\RecargaCombustibleServicio.cs" />
     <Compile Include="Servicios\IngresoGasto\EgresoServicio.cs" />
