--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Controllers\CajaGeneralController.cs" />
     <Compile Include="Controllers\CentroCostoController.cs" />
     <Compile Include="Controllers\CobranzaController.cs" />
+    <Compile Include="Controllers\CombustibleController.cs" />
     <Compile Include="Controllers\CuentaContableController.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\EmpresasController.cs" />
@@ -295,6 +296,7 @@
     <Compile Include="Models\Catalogos\CentroCosto\CentroCostoModel.cs" />
     <Compile Include="Models\Catalogos\CentroCosto\CentroCostoModificarDTO.cs" />
     <Compile Include="Models\Catalogos\CentroCosto\TipoCentroCostoDTO.cs" />
+    <Compile Include="Models\Catalogos\CombustibleModel.cs" />
     <Compile Include="Models\Catalogos\CuentaContable\CuentaContableCrearDTO.cs" />
     <Compile Include="Models\Catalogos\CuentaContable\CuentaContableDTO.cs" />
     <Compile Include="Models\Catalogos\CuentaContable\CuentaContableEliminarDTO.cs" />
@@ -11575,6 +11577,7 @@
     <Content Include="Views\Pedidos\_ComboBoxPartialPais.cshtml" />
     <Content Include="Views\Remanente\_cbPuntosventaPartial.cshtml" />
     <Content Include="Views\EquipoTransporte\Index.cshtml" />
+    <Content Include="Views\Combustible\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
