--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -199,6 +199,15 @@
     <add key="PostRegistrarVehiculo" value="api/equipotransporte/registrar/vehiculo" />
     <add key="PutEliminarVehiculo" value="api/equipotransporte/eliminar/vehiculo/" />   
     <!-- EquipoTransporte -->
+    <!-- Combustible -->
+    <add key="GetListaCCombustible" value="api/catalogos/consulta/combustible" />
+    <add key="GetCCombustibleIdEmpr" value="api/catalogos/consulta/combustibleidempresa/" />
+    <add key="PutCCombustibleFiltro" value="api/catalogos/buscar/combustiblefilter" />
+    <add key="GetCCombustibleID" value="api/catalogos/consulta/combustibleid/" />    
+    <add key="PostRegistraCombustible" value="api/catalogos/registra/combustible" />
+    <add key="PutModificaCombustible" value="api/catalogos/modifica/combustible" />
+    <add key="PutEliminaCombustible" value="api/catalogos/elimina/combustible/" />
+    <!-- Combustible -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
