--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -202,6 +202,7 @@
     <!-- Combustible -->
     <add key="GetListaCCombustible" value="api/catalogos/consulta/combustible" />
     <add key="GetCCombustibleIdEmpr" value="api/catalogos/consulta/combustibleidempresa/" />
+    <add key="GetTiposUnidad" value="api/catalogos/consulta/tipounidadidempresa/" />
     <add key="PutCCombustibleFiltro" value="api/catalogos/buscar/combustiblefilter" />
     <add key="GetCCombustibleID" value="api/catalogos/consulta/combustibleid/" />    
     <add key="PostRegistraCombustible" value="api/catalogos/registra/combustible" />
